vpnserver-cloudformation.json
{
    "AWSTemplateFormatVersion": "OpenSwan VPN Server",
    "Parameters":{
        "KeyName":{
            "Description": "SSH Key Pair",
            "Type": "AWS::EC2::KeyPair::KeyName",
            "ConstraintDescription": "Must be a name of existing ssh key/pair"
        },
        "VPC":{
            "Description": "Select the one and only VPC",
            "Type": "AWS::EC2::VPC::Id"
        },
        "Subnet":{
            "Description": "Select one of available subnet",
            "Type": "AWS::EC2::Subnet::Id"
        },
        "IPSecSharedSecret":{
            "Description": "Shared secred IPSec key",
            "Type": "String"
        },
        "VPNUser":{
            "Description": "The VPN user",
            "Type": "String"
        },
        "VPNPassword": {
            "Description": "The VPN password.",
            "Type": "String"
        },
        "InstanceType":{
            "Description": "EC2 instance type",
            "Type": "AWS::EC2::InstanceType::Id"
        }

    },
    "Mappings":{
        "EC2RegionMap":{
            "us-east-1": {
                "AmazonLinuxAMIHVMEBSBacked64bit": "ami-8c1be5f6"
            },
            "ca-central-1": {
                "AmazonLinuxAMIHVMEBSBacked64bit": "ami-fd55ec99"
            },
            "eu-west-2": {
                "AmazonLinuxAMIHVMEBSBacked64bit": "ami-1a7f6d7e"
            },
            "eu-west-1": {
                "AmazonLinuxAMIHVMEBSBacked64bit": "ami-acd005d5"
            },
            "sa-east-1":{
                "AmazonLinuxAMIHVMEBSBacked64bit": "ami-f1344b9d"
            }

        }
    },
    "Resources":{
        "EC2Instance":{
            "Type": "AWS::EC2::Instance",
            "Properties":{
                "InstanceType": {"Ref": "InstanceType"},
                "SecurityGroupIds": [{"Ref": "InstanceSecurityGroup"}],
                "ImageId": {"Fn::FindInMap": ["EC2RegionMap", {"Ref": "AWS::Region"}, "AmazonLinuxAMIHVMEBSBacked64bit"]},
                "SubnetId": {"Ref": "Subnet"},
                "UserData": {"Fn::Base64": {"Fn::Join": ["", [
                    "#!/bin/bash -ex\n",
                    "export IPSEC_PSK=", {"Ref": "IPSecSharedSecret"}, "\n",
                    "export VPN_USER=", {"Ref": "VPNUser"}, "\n",
                    "export VPN_PASSWORD=", {"Ref": "VPNPassword"}, "\n",
                    "export STACK_NAME=", {"Ref": "AWS::StackName"}, "\n",
                    "export REGION=", {"Ref": "AWS::Region"}, "\n",
                    ]]}}
            }
        },
        "InstanceSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Enable access to VPN server",
                "VpcId": {"Ref": "VPC"},
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": "500",
                        "ToPort": "500",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": "1701",
                        "ToPort": "1701",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": "4500",
                        "ToPort": "4500",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        }
    },
    "Outputs": {
        "ServerIP": {
            "Description": "Public IP address of the vpn server",
            "Value": {"Fn::GetAtt": ["EC2Instance", "PublicIp"]}
        },
        "IPSecSharedSecret": {
            "Description": "The shared key for the VPN connection (IPSec)",
            "Value": {"Ref": "IPSecSharedSecret"}
        },
        "VPNUser": {
            "Description": "The username for the vpn connection",
            "Value": {"Ref": "VPNUser"}
        },
        "VPNPassword": {
            "Description": "The password for the vpn connection",
            "Value": {"Ref": "VPNPassword"}
        }
    }
}
